--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>cloud-hystrix-dashboard</module>
         <module>cloud-zuul-gateway-9527</module>
         <module>cloud-config-3344</module>
+        <module>cloud-consumer-dept-feign</module>
     </modules>
 
     <properties>
